# Project_List

./: CMakeLists.txt  CategoryProduct.cpp  CategoryProduct.h  Lista.cpp  Lista.h  Observer.h  Product.cpp  Product.h  Subject.h  Utente.cpp  Utente.h  ViewUtente.cpp  ViewUtente.h  main.cpp
Appunti_Progetto/: Progetto_lista_modificato.drawio
test/: CMakeLists.txt  ListaTest.cpp  RunAllTest.cpp  UtenteTest.cpp
